--- a/view/pages/404.html
+++ b/view/pages/404.html
@@ -20,9 +20,8 @@
                 text-align: center;
             }
         </style>
-        <script src="https://font.emtech.cc/emfont.js"></script>
     </head>
-    <body class="emfont-LINESeedTW">
+    <body>
         {{nav}}
         <main>
             <h1>找不到頁面</h1>
@@ -38,7 +37,7 @@
         </main>
         {{footer}}
         <script>
-            emfont.init();
+            
         </script>
         <!-- <script src="/static/script.js"></script> -->
     </body>
