--- a/view/pages/tags.html
+++ b/view/pages/tags.html
@@ -41,9 +41,8 @@
                 }
             }
         </script>
-        <script src="https://font.emtech.cc/emfont.js"></script>
     </head>
-    <body class="emfont-LINESeedTW">
+    <body>
         {{nav}}
         <input type="checkbox" id="hideTags" />
         <div class="main-container post-page"></div>
