--- a/view/partials/about.html
+++ b/view/partials/about.html
@@ -5,8 +5,8 @@
 	</div>
 	<p>數位創作者，全端工程龍。</p>
 	<div class="about-links">
-		<a href="https://github.com/Edit-Mr/" target="_blank" aria-label="GitHub"><img src="/static/img/github-uwu.svg" alt="GitHub" /></a
-		><a href="https://www.instagram.com/elvisdragonmao/" target="_blank" aria-label="Instagram"><img src="/static/img/instagram.svg" alt="Instagram" /></a
-		><a href="/p/about" class="about-rarr" aria-label="About"><img src="/static/img/rarr.svg" alt="About" /></a>
+		<a href="https://github.com/Edit-Mr/" target="_blank" aria-label="GitHub"><img src="/static/img/github-uwu.svg" alt="GitHub" /></a>
+		<a href="https://www.instagram.com/elvisdragonmao/" target="_blank" aria-label="Instagram"><img src="/static/img/instagram.svg" alt="Instagram" /></a>
+		<a href="/p/about" class="about-rarr" aria-label="About"><img src="/static/img/rarr.svg" alt="About" /></a>
 	</div>
 </div>
