--- a/view/partials/aside.html
+++ b/view/partials/aside.html
@@ -11,7 +11,11 @@
 <a href="https://elvismao.com/zh-Hant/hmmm?f=emtech" aria-label="交個朋友" target="_blank">
 	<div class="hmmm-join">
 		<h2>交個朋友！</h2>
-		<p>歡迎留下你的電子郵件，<br />每月分享近況和免費好東西。</p>
+		<p>
+			歡迎留下你的電子郵件，
+			<br />
+			每月分享近況和免費好東西。
+		</p>
 	</div>
 </a>
 <a href="https://"></a>
