--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -1,13 +1,18 @@
 <header>
 	<div id="header-playground">
 		<div class="header-title">
-			<h1>毛哥EM<span>資訊密技</span></h1>
+			<h1>
+				毛哥EM
+				<span>資訊密技</span>
+			</h1>
 		</div>
 	</div>
 	<div class="header-right">
 		<div class="header-categories">
-			<a href="/p/about" class="header-categories-item">關於本站</a><a href="/rss.xml" class="header-categories-item">RSS</a><a href="/p/friends" class="header-categories-item">友情連結</a
-			><a href="/p/emblog" class="header-categories-item">關於 emblog</a>
+			<a href="/p/about" class="header-categories-item">關於本站</a>
+			<a href="/rss.xml" class="header-categories-item">RSS</a>
+			<a href="/p/friends" class="header-categories-item">友情連結</a>
+			<a href="/p/emblog" class="header-categories-item">關於 emblog</a>
 		</div>
 		<a href="">
 			<div class="header-newPost">
