--- a/view/pages/404.html
+++ b/view/pages/404.html
@@ -27,7 +27,10 @@
 			<h1>找不到頁面</h1>
 			<p>
 				你說你不想在這裡 我也不想在這裡
-				<br />於是轉身向<a href="/">首頁</a>走去
+				<br />
+				於是轉身向
+				<a href="/">首頁</a>
+				走去
 				<br />
 				-- 《草東沒有頁面》
 			</p>
