--- a/view/partials/footer.html
+++ b/view/partials/footer.html
@@ -4,7 +4,10 @@
 		<div class="footer-text">
 			<p class="copyright">©2021 - 2025 By 毛哥EM</p>
 			<p>
-				毛哥EM 資訊密技使用 emblog 生成。<a href="/post/emblog">了解更多...</a> <br />原創文章採
+				毛哥EM 資訊密技使用 emblog 生成。
+				<a href="/post/emblog">了解更多...</a>
+				<br />
+				原創文章採
 				<a href="https://creativecommons.org/licenses/by-sa/4.0/deed.zh-hant">CC BY-SA 4.0</a>
 				授權，轉載請註明來源。部分圖片取自網路，若有侵權請與我聯絡。
 			</p>
@@ -12,8 +15,8 @@
 		<div class="footer-social">
 			<a href="https://github.com/Edit-Mr/emtech/issues/new/choose" target="_blank" aria-label="Bug Report"><img src="/static/img/warn.svg" alt="Bug Report" /></a>
 			<a href="https://github.com/Edit-Mr/emtech" target="_blank" aria-label="GitHub"><img src="/static/img/github.svg" alt="GitHub" /></a>
-			<a href="https://www.instagram.com/emtech.cc/" target="_blank" aria-label="Instagram"><img src="/static/img/instagram.svg" alt="Instagram" /></a
-			><a href="/rss.xml" target="_blank" aria-label="RSS"><img src="/static/img/rss.svg" alt="RSS" /></a>
+			<a href="https://www.instagram.com/emtech.cc/" target="_blank" aria-label="Instagram"><img src="/static/img/instagram.svg" alt="Instagram" /></a>
+			<a href="/rss.xml" target="_blank" aria-label="RSS"><img src="/static/img/rss.svg" alt="RSS" /></a>
 		</div>
 	</div>
 </footer>
