--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -22,7 +22,12 @@
 		<h2>搜尋</h2>
 		<input type="search" id="search" placeholder="輸入一個或多個關鍵字來搜尋" />
 		<div class="search-results"></div>
-		<div class="google">快捷鍵：<kbd>⌘</kbd> + <kbd>K</kbd></div>
+		<div class="google">
+			快捷鍵：
+			<kbd>⌘</kbd>
+			+
+			<kbd>K</kbd>
+		</div>
 		<label for="search-toggle"><img src="/static/img/circle-x.svg" alt="back" class="back" /></label>
 	</div>
 </div>
