--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -10,7 +10,7 @@
     </ul> -->
 	<div class="right">
 		<a href="/random" class="random" aria-label="隨機文章"><img src="/static/img/dice.svg" alt="隨機文章" /></a>
-		<a href="https://github.com/Edit-Mr/emtech" target="_blank" aria-label="GitHub"><img src="/static/img/github.svg" alt="GitHub" /></a>
+		<a href="https://github.com/elvisdragonmao/emtech" target="_blank" aria-label="GitHub"><img src="/static/img/github.svg" alt="GitHub" /></a>
 		<a href="https://www.instagram.com/emtech.cc" target="_blank" aria-label="Instagram"><img src="/static/img/instagram.svg" alt="Instagram" /></a>
 		<label for="search-toggle" onclick="document.getElementById('search').focus()"><img src="/static/img/search.svg" alt="Search" /></label>
 	</div>
