--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -33,7 +33,7 @@
 					<img src="/static/img/EMprofile.png" alt="" class="author-avatar" />
 					<h3>毛哥EM</h3>
 					<div class="author-social">
-						<a href="https://github.com/Edit-Mr/" target="_blank" aria-label="GitHub"><img src="/static/img/github-uwu.svg" alt="" /></a>
+						<a href="https://github.com/elvisdragonmao/" target="_blank" aria-label="GitHub"><img src="/static/img/github-uwu.svg" alt="" /></a>
 						<a href="https://www.instagram.com/elvisdragonmao/" aria-label="Instagram" target="_blank"><img src="/static/img/instagram.svg" alt="" /></a>
 					</div>
 					<p>數位創作者，全端工程龍</p>
