--- a/view/partials/footer.html
+++ b/view/partials/footer.html
@@ -13,8 +13,8 @@
 			</p>
 		</div>
 		<div class="footer-social">
-			<a href="https://github.com/Edit-Mr/emtech/issues/new/choose" target="_blank" aria-label="Bug Report"><img src="/static/img/warn.svg" alt="Bug Report" /></a>
-			<a href="https://github.com/Edit-Mr/emtech" target="_blank" aria-label="GitHub"><img src="/static/img/github.svg" alt="GitHub" /></a>
+			<a href="https://github.com/elvisdragonmao/emtech/issues/new/choose" target="_blank" aria-label="Bug Report"><img src="/static/img/warn.svg" alt="Bug Report" /></a>
+			<a href="https://github.com/elvisdragonmao/emtech" target="_blank" aria-label="GitHub"><img src="/static/img/github.svg" alt="GitHub" /></a>
 			<a href="https://www.instagram.com/emtech.cc/" target="_blank" aria-label="Instagram"><img src="/static/img/instagram.svg" alt="Instagram" /></a>
 			<a href="/rss.xml" target="_blank" aria-label="RSS"><img src="/static/img/rss.svg" alt="RSS" /></a>
 		</div>
